# MeanFilterINTELx86

./: .gitignore  CMakeLists.txt  README.md  func.asm  main.cpp  mean_filter.asm  mean_filter_cpp_ugly.h
cmake_modules/: FindSFML.cmake
